[project]
name = "clashup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator>=0.33.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "invoke>=2.2.0",
    "ipython>=9.5.0",
    "ruff>=0.13.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.mccabe]
max-complexity = 15

